prevent save of not loaded modules

BUG:301507